--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,6 +1,8 @@
 body {
     margin: 0px;
     padding: 0px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
 }
 
 .container {
@@ -43,7 +45,7 @@ body {
 .box {
     width: 50px;
     height: 50px;
-    border: 1px solid #b5afaf;
+    border: 2px solid #E2E8F0;
     margin: 2px;
     display: flex;
     align-items: center;
@@ -54,11 +56,13 @@ body {
 .op {
     width: 31.4px;
     height: 36.4px;
-    border: 1px solid #b5afaf;
+    border: 1px solid #E2E8F0;
     margin: 2px;
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: #E2E8F0;
+    color: rgb(48, 48, 48);
 }
 
 .box,
@@ -76,14 +80,30 @@ body {
     margin-top: 50px;
 }
 
-.right {
-    background-color: green;
+.box.right,
+.num.right,
+.op.right {
+    background-color: #22C55E;
+    border-color: #22C55E;
+    color: #fff;
 }
 
-.miss {
-    background-color: yellow;
+.box.miss,
+.num.miss,
+.op.miss {
+    background-color: #EAB308;
+    border-color: #EAB308;
+    color: #fff;
 }
 
-.wrong {
-    background-color: red;
+.box.wrong,
+.num.wrong,
+.op.wrong {
+    background-color: #94A3B8;
+    border-color: #94A3B8;
+    color: #fff;
+}
+
+.filled {
+    border-color: rgb(48, 48, 48);
 }
