Make instruction modal

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -5,6 +5,10 @@ body {
     font-weight: bold;
 }
 
+body .container.modal-active {
+    pointer-events: none;   
+}
+
 .container {
     box-sizing: border-box;
     margin: auto;
@@ -27,6 +31,16 @@ body {
     width: 100%;
     box-sizing: border-box;
     padding: 0 30px;
+}
+
+.icon {
+    border: 1px solid #000;
+    width: 20px;
+    height: 20px;
+    text-align: center;
+    border-radius: 50%;
+    pointer-events: all;
+    cursor: pointer;
 }
 
 .box-content,
@@ -119,4 +133,68 @@ body {
     width: 54px;
     height: 54px;
     margin: 0px;
+}
+
+/* MODAL */
+
+.how-to-play {
+    display: none;
+}
+
+.how-to-play.active {
+    position: absolute;
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(144, 149, 160, 0.6);
+}
+
+.modal {
+    width: 400px;
+    height: 60vh;
+    border-radius: 5px;
+    background-color: #fff;
+    padding: 20px;
+    box-sizing: border-box;
+    pointer-events: none;
+}
+
+.modal-header {
+    display: flex;
+    justify-content: space-between;
+}
+
+.modal h4 {
+    margin-top: 5px;
+}
+
+.modal .close-btn {
+    width: 20px;
+    height: 20px;
+    border: 2px solid #000;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    pointer-events: all;
+    cursor: pointer;
+}
+
+.modal .instruction,
+.modal .rules {
+    font-size: 14px;
+    font-weight: 500;
+    text-align: justify;
+}
+
+.modal .row {
+    width: auto;
+    font-weight: bold;
+}
+
+.modal .instruction-list li,
+.modal .rules-list li {
+    padding: 5px 0px;
 }
