--- a/src/css/style.css
+++ b/src/css/style.css
@@ -99,17 +99,17 @@ body .container.modal-active {
     margin-top: 50px;
 }
 
-.box.right,
-.num.right,
-.op.right {
+.box-content .row .box.right,
+.keyboard-content .key .number .num.right,
+.keyboard-content .key .operator .op.right {
     background-color: #22C55E;
     border-color: #22C55E;
     color: #fff;
 }
 
-.box.miss,
-.num.miss,
-.op.miss {
+.row .box.miss,
+.key .num.miss,
+.key .op.miss {
     background-color: #EAB308;
     border-color: #EAB308;
     color: #fff;
